# customer-ai-runtime

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
docs/: TODO.md  adapter-design.md  api.md  architecture.md  auth-bridge.md  business-enhancement.md  business-requirements.md  deployment.md  events.md  module-design.md  plugin-system.md  progress-control.md  project-overview.md  roadmap.md  slo.md  storage.md  testing.md
examples/: business_tool_plugin_example.py  context_enricher_example.py  host_custom_auth_bridge.py  host_fastapi_integration.py  http-demo.http  industry_adapter_example.py  python_client.py
scripts/: run-dev.ps1  seed-demo.ps1  test.ps1  test.sh
src/customer_ai_runtime/: __init__.py  __main__.py  app.py
src/customer_ai_runtime/api/: __init__.py  routes.py  schemas.py
src/customer_ai_runtime/application/: __init__.py  access.py  admin.py  auth.py  business.py  chat.py  container.py  handoff.py  knowledge.py  plugins.py  routing.py  runtime.py  session.py  tool_catalog.py  tooling.py  voice_rtc.py
src/customer_ai_runtime/core/: config.py  diagnostics_export.py  errors.py  limits.py  rate_limit.py  redaction.py  request_context.py  responses.py  text.py
src/customer_ai_runtime/domain/: __init__.py  (+2 more)
tests/: test_builtin_plugins.py  test_openai_prompt_sanitization.py  test_provider_extensions.py  test_rate_limit_subject.py  test_response_enhancement.py  test_routing_enhancements.py  test_runtime_api.py  test_speech_provider_extensions.py
(+17 files in other folders)
